<resources>
    <string name="app_name">DNNAndroidClient</string>

    <string name="button_start">Start DNN client</string>
    <string name="button_stop">Stop DNN client</string>

    <string name="text_start">DNN client not running</string>
    <string name="text_stop">DNN client is running</string>

    <string name="enter_ip_text">Enter DNN server IP</string>
    <string name="current_ip_text">Current DNN server IP:</string>
    <string name="HintIP">default: 79.181.131.28</string>

    <string name="dnn_service_name">DNNService</string>

    <string name="notification_title">DNN client Service</string>
    <string name="notification_message">Running a DNN client</string>
    <string name="ticker_text">AndroidDnnClient</string>

    <string name="toast_start">Started DNN client</string>
    <string name="toast_stop">Stoped DNN client</string>

    <string name="enter_username_text">Enter username</string>
    <string name="username_text">username</string>
    <string name="HintUsername">(Must be letters or digits)</string>

    <string name="PrefSavedIP">savedIP</string>
    <string name="PrefSavedUsername">SavedUsername</string>

    <string name="toast_username">Please enter a valid username</string>
    <string name="dnn_client_stoped">Dnn client stopped!</string>
    <string name="action_settings">settings</string>
    <string name="action_about">About</string>
    <string name="about_done">Done</string>
    <string name="about_cancel">Cancel</string>
    <string name="about_title">About DNNAndroidClient</string>
    <string name="about_text"><b>"About the app:</b>
        "\nDnnAndroidClient is a part of a student project in distributed deep learning "
        "made for the NSSL lab at the EE faculty at the Technion institute. "
        "Any android connected to the server running the app contributes to a distributed network. "
        "This network preforms model training for image recognition. "
        "The deep learning library driving the app is the open source \'tiny-dnn\' library. "
        "DNN stands for \"Deep Neural Network\"."
        "\n"
        <b>"\nAbout us:"</b>
        "\nWe're a couple of students from the EE faculty in the Technion institute. "
        "We've taken a project within the NSSL lab. "
        "Our supervisor was Roman K."
        "\nThat's it!!"
        "\n"
        <b>"\nVersion:"</b>
        "\n1.03"
        "\n"
        <b>"\nLinks:"</b>
        "\nNSSL lab:"
        "\nhttp://nssl.eew.technion.ac.il"
        "\ntiny-dnn on github:"
        "\nhttps://github.com/tiny-dnn/tiny-dnn"
    </string>
    <string name="action_log_toggle">Toggle Log</string>


</resources>
